--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@sanity/client": "^3.4.1",
+    "@sanity/image-url": "^1.0.1",
     "autoprefixer": "^10.4.11",
     "next": "12.3.1",
+    "next-sanity-image": "^3.2.1",
     "postcss": "^8.4.16",
     "react": "18.2.0",
     "react-dom": "18.2.0",
